   IGV dev to production builds.
 - Remove import of NH:i bam tags as read-origin-index, since the NH tag seems to contain different types of data
   depending on the aligner that produced the alignment.
 - compact-to-sam mode: fix bug where bam tags containing a colon character (:) would be truncated after the first
   colon. Thanks to Vadim Zalunin for reporting this problem.
 - VCFParser group associations: Make it possible to lookup an INFO column by either INFO/colname or colname.
 - NonAmbiguousAlignmentReader: fix an NPE when reading alignments where all entries have the ambiguity field.
2.0.1
 - Release Goby C/C++ APIs under the LGPL license version 3 to make it possible for companies to incorporate support
   for Goby formats in their tools. Thanks to Collin Hercus for the suggestion. Please note that part of the Goby
   Java APIs are already licensed under the LGPL (anything packaged under the Goby-io.jar file).
 - C++ API: Support to set placed unmapped (i.e., mate that does not map is recorded with the read that mapped)
   and clipleft/clipright with quality scores.
 - Fix problem when using a genome backed by a samtools/picard faidx file. In some cases, read bases would be returned
   shifted by one position. Thanks to James Bonfield for reporting this problem.
 - SAM/BAM tags start at column 12, index 11. --preserve-all-tags could skip the first tag on some datasets (e.g.,
   dataset where the first tag was not a MD:Z or RG:Z). Thanks to James Bonfield for reporting this problem.
 - Introduce interface for ReadsWriter. Introduce mock implementation to write reads to text. This is useful to write
   more intelligible JUnit tests.
 - mode sam-to-compact now supports option --read-names-are-query-indices to indicate that the read names are integers
   (typically produced by compact-to-fasta from a chunk of a large file).
 - Fix a bug in reformat-compact-reads which did not trim quality scores for paired end reads correctly.
2.0